CallNew方法增加 + 不释放当前重用的JSRef